--- a/.github/workflows/build_LoopFollow.yml
+++ b/.github/workflows/build_LoopFollow.yml
@@ -261,19 +261,23 @@ jobs:
         run: bundle install
 
       # --- CRITICAL: Make CocoaPods/xcodeproj compatible with Xcode 16.x ---
-      - name: Install CocoaPods & use Xcodeproj from GitHub (supports Xcode 16)
+      - name: Prepare Ruby gems sandbox (isolated GEM_HOME/GEM_PATH)
         run: |
           set -e
-          # Fjern gamle varianter
-          sudo gem uninstall -aIx xcodeproj || true
-          # Installer helper for å hente gems fra GitHub
-          sudo gem install specific_install -N
-          # Installer Xcodeproj direkte fra GitHub (HEAD har støtte for object version 70)
-          sudo gem specific_install -l https://github.com/CocoaPods/Xcodeproj.git
-          # Installer CocoaPods etter at riktig xcodeproj er på plass
-          sudo gem install cocoapods -N
+          echo "GEM_HOME=$HOME/.rubysandbox" >> $GITHUB_ENV
+          echo "GEM_PATH=$HOME/.rubysandbox" >> $GITHUB_ENV
+          echo "$HOME/.rubysandbox/bin" >> $GITHUB_PATH
+
+      - name: Install CocoaPods & Xcodeproj (from GitHub, supports Xcode 16)
+        run: |
+          set -e
+          # Bruk vår sandbox (unngå system-/Homebrew-gems)
+          mkdir -p "$GEM_HOME"
+          gem install specific_install -N
+          gem specific_install -l https://github.com/CocoaPods/Xcodeproj.git
+          gem install cocoapods -N
           pod --version
-          ruby -e "require 'xcodeproj'; puts 'xcodeproj ' + Xcodeproj::VERSION"
+          ruby -e "require 'xcodeproj'; puts 'xcodeproj ' + Xcodeproj::VERSION; puts Gem.loaded_specs['xcodeproj'].full_gem_path"
 
       # Update Charts/DGCharts to version that contains Privacy Manifest
       - name: Update Charts/DGCharts pod
